# silly-app

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
